--- a/source/styles/blocks/sort.scss
+++ b/source/styles/blocks/sort.scss
@@ -15,7 +15,7 @@
 .sort__select {
   max-width: 165px;
   height: 32px;
-  padding-right: 20px;
+  padding: 4px 20px 4px 10px;
   font-family: $font-primary;
   font-weight: 600;
   font-size: 16px;
@@ -24,7 +24,7 @@
   background-color: transparent;
   background-image: url("../../icons/buttons/select-arrow.svg");
   background-repeat: no-repeat;
-  background-position: right 0 top 13px;
+  background-position: right 10px top 13px;
   background-size: 10px 6px;
   border: 0;
   appearance: none;
